--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <a href="#" class="logo">
+            <a href="#" class="logo" data-animar="e">
                 <img src="img/logo" alt="Logotipo da Empresa">
             </a>
             <nav class="nav">
@@ -26,7 +26,7 @@
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </nav>
-            <div class="hamburger-menu">
+            <div class="hamburger-menu" data-animar="d">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -37,42 +37,42 @@
     <main>
         <section id="home" class="hero-section">
             <div class="container">
-                <h1>Embalagens Inovadoras para Alimentos</h1>
-                <p>Qualidade, Segurança e Sustentabilidade para seus produtos.</p>
-                <a href="#contato" class="btn">Fale Conosco</a>
+                <h1 data-animar="c">Embalagens Inovadoras para Alimentos</h1>
+                <p data-animar="d">Qualidade, Segurança e Sustentabilidade para seus produtos.</p>
+                <a href="#contato" class="btn" data-animar="d" style="transition-delay:0.2s;">Fale Conosco</a>
             </div>
         </section>
 
         <section id="sobre" class="about-section">
             <div class="container">
-                <h2>Sobre Nossa Empresa</h2>
-                <p>A [sua empresa] é uma empresa especializada na produção de selo para alimentos, rótulos e etiquetas
+                <h2 data-animar="b">Sobre Nossa Empresa</h2>
+                <p data-animar="d">A [sua empresa] é uma empresa especializada na produção de selo para alimentos, rótulos e etiquetas
                     adesivas.</p>
 
-                <p>Com sede estabelecida na cidade de São Paulo, a Apiflex atua no segmento desde 1993 e vem trabalhando
+                <p data-animar="d">Com sede estabelecida na cidade de São Paulo, a Apiflex atua no segmento desde 1993 e vem trabalhando
                     com máxima excelência, buscando o equilíbrio entre tecnologia nos equipamentos, qualidade nos
                     produtos e atendimento aos clientes.</p>
 
-                <p><strong>Estrutura de produção</strong></p>
+                <p data-animar="e"><strong>Estrutura de produção</strong></p>
 
-                <p>Equipada com máquinas flexográficas de 10" (254 mm) de largura, a Apiflex trabalha com:</p>
+                <p data-animar="d">Equipada com máquinas flexográficas de 10" (254 mm) de largura, a Apiflex trabalha com:</p>
 
-                <p>Impressão sequencial em até 10 (dez) módulos (policromia), que pode ser na frente, verso ou cola do
+                <p data-animar="d">Impressão sequencial em até 10 (dez) módulos (policromia), que pode ser na frente, verso ou cola do
                     material.</p>
 
-                <p>Utilização de materiais como polietileno, polipropileno, poliestireno, poliéster, papel, cartão e
+                <p data-animar="d">Utilização de materiais como polietileno, polipropileno, poliestireno, poliéster, papel, cartão e
                     vinil, podendo tais materiais serem adesivados ou não.</p>
 
-                <p>Tintas desenvolvidas por nossos fornecedores para diversas finalidades.</p>
+                <p data-animar="d">Tintas desenvolvidas por nossos fornecedores para diversas finalidades.</p>
 
-                <p>Aplicação de Verniz Ultravioleta (UV — que garante resistência e alto brilho superficial) ou
+                <p data-animar="d">Aplicação de Verniz Ultravioleta (UV — que garante resistência e alto brilho superficial) ou
                     Resistente à Umidade (para produtos refrigerados).</p>
 
-                <p>Laminação de filmes para proteção, resistência ou selagem.</p>
+                <p data-animar="d">Laminação de filmes para proteção, resistência ou selagem.</p>
 
-                <p>Hot Stamping e Cold Stamping.</p>
+                <p data-animar="d">Hot Stamping e Cold Stamping.</p>
 
-                <p>Apresentação em bobinas, folhas planas e cortes especiais são as várias opções de acabamento
+                <p data-animar="d">Apresentação em bobinas, folhas planas e cortes especiais são as várias opções de acabamento
                     oferecidos.</p>
 
             </div>
@@ -80,8 +80,8 @@
 
         <section id="produtos" class="products-section">
             <div class="container">
-                <h2>Nossos Produtos</h2>
-                <p>
+                <h2 data-animar="c">Nossos Produtos</h2>
+                <p data-animar="b">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
@@ -105,22 +105,22 @@
 
         <section id="tecnologia" class="tech-section">
             <div class="container">
-                <h2>Tecnologia e Qualidade</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque ducimus quidem, natus laudantium cum architecto ullam, autem voluptate similique porro eveniet deleniti necessitatibus et, asperiores placeat. Deserunt laborum porro dolores suscipit saepe repellat quae at, laudantium nisi aut earum quia? Culpa necessitatibus numquam, iure iste, ducimus officia ex itaque alias accusamus, tenetur neque veniam. Quod suscipit quisquam dolores asperiores fugit, modi consequuntur id perferendis harum beatae culpa cupiditate est reiciendis ut nesciunt enim voluptatem ipsum nisi consequatur, officiis voluptatibus error. Dicta laborum, enim pariatur dolore sapiente, quas cupiditate ex illo voluptas suscipit, repellat a quos eum est ipsum alias.</p>
+                <h2 data-animar="b">Tecnologia e Qualidade</h2>
+                <p data-animar="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit atque ducimus quidem, natus laudantium cum architecto ullam, autem voluptate similique porro eveniet deleniti necessitatibus et, asperiores placeat. Deserunt laborum porro dolores suscipit saepe repellat quae at, laudantium nisi aut earum quia? Culpa necessitatibus numquam, iure iste, ducimus officia ex itaque alias accusamus, tenetur neque veniam. Quod suscipit quisquam dolores asperiores fugit, modi consequuntur id perferendis harum beatae culpa cupiditate est reiciendis ut nesciunt enim voluptatem ipsum nisi consequatur, officiis voluptatibus error. Dicta laborum, enim pariatur dolore sapiente, quas cupiditate ex illo voluptas suscipit, repellat a quos eum est ipsum alias.</p>
             </div>
         </section>
 
         <section id="sustentabilidade" class="sustainability-section">
             <div class="container">
-                <h2>Compromisso com a Sustentabilidade</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique aliquid, voluptates placeat, deserunt vitae aspernatur quisquam blanditiis, aliquam nobis sed esse repellat dicta ex expedita itaque quam at. Quidem sint molestiae iste porro! Ipsam doloremque molestiae ipsum velit corporis, doloribus voluptates neque. Facilis odit adipisci, minima commodi quo exercitationem suscipit!</p>
+                <h2 data-animar="b">Compromisso com a Sustentabilidade</h2>
+                <p data-animar="c">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique aliquid, voluptates placeat, deserunt vitae aspernatur quisquam blanditiis, aliquam nobis sed esse repellat dicta ex expedita itaque quam at. Quidem sint molestiae iste porro! Ipsam doloremque molestiae ipsum velit corporis, doloribus voluptates neque. Facilis odit adipisci, minima commodi quo exercitationem suscipit!</p>
             </div>
         </section>
 
         <section id="localizacao" class="location-section">
             <div class="container">
-                <h2>Onde Estamos</h2>
-                <div class="map-container">
+                <h2 data-animar="b">Onde Estamos</h2>
+                <div class="map-container" data-animar="c">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.537597202664!2d-46.7021397246495!3d-23.51315917883301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef85d526daefb%3A0xb2239436054c8ec0!2sApiflex%20Industria%20e%20Comercio%20Ltda.!5e0!3m2!1sen!2sbr!4v1750455136758!5m2!1sen!2sbr"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
@@ -153,7 +153,7 @@
                         <label for="message">Mensagem:</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="submit-button">Enviar Mensagem</button>
+                    <button type="submit" class="submit-button" data-animar="c">Enviar Mensagem</button>
                 </form>
 
                 <div class="social-media-links">
@@ -179,13 +179,13 @@
 
         <section id="ouvidoria" class="ombudsman-section">
             <div class="container">
-                <h2>Ouvidoria e Atendimento</h2>
+                <h2 data-animar="b">Ouvidoria e Atendimento</h2>
                 <div id="chatbot-container">
                     <p>Ficou com alguma dúvida? Converse com nosso assistente virtual:</p>
                     <div class="chatbot-interface">
                         <div class="chatbot-messages"></div>
                         <input type="text" id="chatbot-input" placeholder="Digite sua mensagem...">
-                        <button id="chatbot-send-btn" class="btn-chatbot">Enviar</button>
+                        <button data-animar="c" id="chatbot-send-btn" class="btn-chatbot">Enviar</button>
                     </div>
                 </div>
             </div>
